tests/errors/error_semantic_undeclared_var.c
int x = 10;
y = 20; // y is not declared
